# bolsas-scraper

./: .gitignore  Dockerfile  docker-compose.yml  flake.nix  main.py  pyproject.toml  scraper.py  setup.py
