[tool.poetry]
name = "bolsas-scraper"
version = "0.1.0"
description = ""
authors = ["Rafael Girão <git@rafael.ovh>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"
lxml = "^4.7.1"
sentry-sdk = "^1.5.4"

[tool.poetry.dev-dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"
lxml = "^4.7.1"
sentry-sdk = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
